--- a/src/ui/common/Button.pug
+++ b/src/ui/common/Button.pug
@@ -48,7 +48,7 @@ style.
 		text-align left
 		user-select none
 		&:hover:not(:disabled):not(.disabled)
-			background var(--c-con-norm)
+			background var(--c-con-normal)
 			border-color wheat
 			color wheat
 		&:disabled
