--- a/src/ui/feature/post/PostInfoCard.pug
+++ b/src/ui/feature/post/PostInfoCard.pug
@@ -19,7 +19,7 @@ script.
 	)
 
 {#if post}
-	a.post-headline(class:post-read={localStorage['visited.' + post_short_id] || false} href='/{post.subreddit}/{post_short_id}')
+	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} href='/{post.subreddit}/{post_short_id}')
 		div(style='display:none')
 			PostScore(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.submit(api.ID('post_vote', post_short_id), { numerical_vote: vote })} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
 		{#if post.link_flair_text}
@@ -46,14 +46,14 @@ script.
 				PostAge(created={post.created_utc} edited={post.edited} size='medium')
 
 style.
-	.post-headline
+	.post-info-card
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
 		gap 6px
 		padding 30px
 		&:hover
-			background var(--c-con-norm)
+			background var(--c-con-normal)
 	.post-metadata
 		align-items center
 		align-self stretch
