--- a/src/ui/feature/subreddit/SubredditRules.pug
+++ b/src/ui/feature/subreddit/SubredditRules.pug
@@ -52,7 +52,7 @@ style.
 		letter-spacing 0.03em
 		padding 5px
 	.subreddit-rule-description
-		border-left 1px solid var(--c-con-norm)
+		border-left 1px solid var(--c-con-normal)
 		font-size 9pt
 		margin 1em
 		padding 0 3em
