internals: fix wrongcased import name

--- a/src/ui/app/routing/AppRouter.pug
+++ b/src/ui/app/routing/AppRouter.pug
@@ -8,7 +8,7 @@ script.
 	import MultiredditPage from '../../feature/multireddit/MultiredditPage.pug'
 	import SubredditPage from '../../feature/subreddit/SubredditPage.pug'
 	import UserPage from '../../feature/user/UserPage.pug'
-	import WikiPage from '../../feature/wiki/WIkiPage.pug'
+	import WikiPage from '../../feature/wiki/WikiPage.pug'
 	
 	import parse_route from './parse_route.coffee'
 	route = null
