listing: work on listing layout; various

--- a/src/ui/app/context/AppThemeColorContext.pug
+++ b/src/ui/app/context/AppThemeColorContext.pug
@@ -12,5 +12,5 @@ script.
 	set_theme_color('#808080')
 	setContext('set_theme_color', set_theme_color)
 
-#color-strategy(class='color-strategy-{color_strategy}' style='background: {theme_color}')
+#color-strategy(class='color-strategy-{color_strategy}' style='--c-theme: {theme_color}; background: var(--c-theme)')
 	slot
