--- a/src/ui/app/routing/AppRedirect.pug
+++ b/src/ui/app/routing/AppRedirect.pug
@@ -1,8 +1,8 @@
 script.
-	export url = ''
+	export url = null
 	location.href = url
 
 #redirect
-	h1 Redirecting you to {url.host}...
+	h1 Redirecting you to {(new URL(url)).host}...
 	p If you are not redirected automatically, 
 		a(href={url}) click here.
