--- a/src/ui/common/HotkeyLabel.pug
+++ b/src/ui/common/HotkeyLabel.pug
@@ -7,6 +7,11 @@ style.
 	kbd
 		align-items center
 		border 1px solid
-		border-radius 4px
+		border-radius 3px
 		display flex
-		padding 0 4px
+		font-family inherit
+		font-size 12px
+		height 18px
+		justify-content center
+		line-height 1
+		padding 0 3px
