--- a/src/ui/common/layout/SplitLayout.pug
+++ b/src/ui/common/layout/SplitLayout.pug
@@ -1,17 +1,16 @@
 script.
 
 main
-	#layout-content-left
+	section#layout-content-left
 		slot(name='left')
-	#layout-content-right
+	section#layout-content-right
 		slot(name='right')
 
 style.
 	main
 		display grid
-		grid-template-columns calc(50% - 120px) calc(50% + 120px)
-		height 100dvh
-		width 100dvw
+		grid-template-columns calc(50dvw - 80px) calc(50dvw + 80px)
+		grid-template-rows 100dvh
 	#layout-content-left
 		align-items flex-end
 		display flex
@@ -19,11 +18,10 @@ style.
 		height 100%
 		padding 40px
 		padding-right 0
-		overflow auto
 		width 100%
 	#layout-content-right
 		height 100%
 		overflow auto
 		padding 40px
-		padding-left 120px
+		padding-left 80px
 		width 100%
