--- a/src/ui/feature/multireddit/MultiredditPage.pug
+++ b/src/ui/feature/multireddit/MultiredditPage.pug
@@ -14,6 +14,8 @@ script.
 	export comment_short_id = null
 	export comments_sort = null
 
+svelte:head
+	title {multireddit_name}/{user_name}
 SplitLayout
 	svelte:fragment(slot='left')
 		PostsListInfo(type='multireddit' multireddit_name={multireddit_name} user_name={user_name})
