--- a/src/ui/feature/post/PostFlair.pug
+++ b/src/ui/feature/post/PostFlair.pug
@@ -5,7 +5,7 @@ script.
 	export rich_text = null
 	export text = null
 
-span.post-flair(style="background-color: {color || 'white'}; color: {(new Color({ hex: color }))?.isDark() ? 'white' : 'black'}")
+span.post-flair(style="background-color: {color || 'white'}; color: {(new Color({ hex: color }))?.isDark() ? 'white' : 'black'}" title={text})
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
@@ -25,6 +25,8 @@ style.
 		display inline-flex
 		font-size 13px
 		gap 3px
+		max-width 100%
+		overflow hidden
 		padding 1px 1ch
 		user-select none
 		white-space pre
